<resources>
    <string name="app_name">Dagger2Demo</string>
    <string name="title_rfid">RFID</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_printer">Printer</string>
    <string name="title_av">AV</string>
    <string name="scan">scan</string>
    <string name="title_map">map</string>
    <string name="action_reset">重置</string>
    <string name="action_ok">确定</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
