<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_rfid"
        android:icon="@drawable/ic_surround_sound_black_24dp"
        android:title="@string/title_rfid" />

    <item
        android:id="@+id/navigation_bluetooth"
        android:icon="@drawable/ic_bluetooth_black_24dp"
        android:title="@string/title_bluetooth" />

    <item
        android:id="@+id/navigation_printer"
        android:icon="@drawable/ic_print_black_24dp"
        android:title="@string/title_printer" />

    <item
        android:id="@+id/navigation_av"
        android:icon="@drawable/ic_music_video_black_24dp"
        android:title="@string/title_av" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

</menu>
